# python-dynamic-plugins

./: README.md  setup.cfg
.github/workflows/: upload-pypi.yml
demo_plugins/demo_module/: MANIFEST.in  README.rst  setup.cfg
dynamic_plugins/: __init__.py  dependencies.py  exceptions.py  extensions.py
examples/: example_load_module.py  example_pip.py
