[metadata]
name = demo-modules
description = Demo module for dynamic modules
version = file: VERSION
long_description = file: README.rst
long_description_content_type = text/x-rst
license = License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
classifiers =
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Environment :: Console
    Operating System :: POSIX
    Operating System :: MacOS
    Operating System :: OS Independent
    Operating System :: Microsoft :: Windows
    Intended Audience :: Other Audience
    Intended Audience :: System Administrators
author = cr0hn
author_email = cr0hn@cr0hn.com
url = https://github.com/cr0hn/none

[options]
zip_safe = True
include_package_data = True
packages = find:
